--- a/css/xpather.css
+++ b/css/xpather.css
@@ -20,18 +20,37 @@
 	padding: 0;
 }
 
+
+textarea {
+	overflow: hidden;
+	resize:none;
+}
+
+textarea::-webkit-scrollbar {
+    width: 1em;
+}
+
+textarea::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-color: rgb(78, 78, 78);
+  outline: 1px solid rgb(112, 126, 141);
+}
+
 #xpather-xpath, #xpather-xpath:focus, #xpather-xpath:active, #xpather-xpath:hover {
 	display: inline-block;
 	float: left;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 6px 0 2px;
-	min-width: 100%;
-	max-width: 100%;
-	width: 100%;
+	min-width: 87%;
+	max-width: 87%;
+	width: 87%;
 	height: 44px;
 	outline: 0;
-	border: 0;
+	border: 1px solid white;
 	background: #000 !important;
 	box-shadow: none;
 	color: #fff !important;
@@ -62,6 +81,68 @@
 #xpather-result.xpather-no-results {
 	color: #ff4630;
 }
+/* The switch - the box around the slider */
+.switch {
+	position: absolute;
+	display: inline-block;
+	margin-left: 70px;
+	margin-top: 5px;
+	width: 60px;
+	height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {display:none;}
+  
+  /* The slider */
+  .slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgb(255, 0, 0);
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+  
+  .slider:before {
+	position: absolute;
+	content: "";
+	height: 26px;
+	width: 26px;
+	left: 4px;
+	bottom: 4px;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+  
+  input:checked + .slider {
+	background-color: rgb(18, 230, 18);
+  }
+  
+  input:focus + .slider {
+	box-shadow: 0 0 1px rgb(18, 230, 18);
+  }
+  
+  input:checked + .slider:before {
+	-webkit-transform: translateX(26px);
+	-ms-transform: translateX(26px);
+	transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+	border-radius: 34px;
+  }
+  
+  .slider.round:before {
+	border-radius: 50%;
+  }
+
+
 
 #xpather-sidebar-toggler {
 	position: absolute;
@@ -72,6 +153,7 @@
 	background: url('chrome-extension://__MSG_@@extension_id__/img/sidebar-toggler.png') 0 0 no-repeat;
 	cursor: pointer;
 }
+
 
 .xpather-sidebar-toggler-active {
 	background-position: 0 -26px !important;
@@ -227,24 +309,6 @@ img.xpather-highlight {
 	top: 50px;
 }
 
-#xpather-sidebar ::-webkit-scrollbar {
-	width: 7px;
-}
-
-#xpather-sidebar ::-webkit-scrollbar-track,
-#xpather-sidebar ::-webkit-scrollbar-corner {
-	border-radius: 10px;
-	background-color: #000;
-}
-
-#xpather-sidebar ::-webkit-scrollbar-thumb {
-	border-radius: 10px;
-	background-color: #333;
-}
-
-#xpather-sidebar ::-webkit-scrollbar-button {
-	display: none;
-}
 
 @-webkit-keyframes xpatherBlink {
 	0% {
