--- a/css/xpather.css
+++ b/css/xpather.css
@@ -70,12 +70,13 @@ textarea::-webkit-scrollbar-thumb {
 .fa-refresh:hover{
 	color: yellow;
 	-webkit-animation:spin 4s linear infinite;
-    -moz-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s 3linear infinite;
     animation:spin 4s linear infinite;
 }
 
 .fa-refresh{
 	color:white;
+	vertical-align:middle;
 }
 
 .fa-floppy-o:hover{
@@ -83,6 +84,7 @@ textarea::-webkit-scrollbar-thumb {
 }
 
 .fa-floppy-o{
+	vertical-align:middle;
 	color:white;
 }
 
@@ -109,7 +111,8 @@ textarea::-webkit-scrollbar-thumb {
 	position: absolute;
 	display: inline-block;
 	margin-left: 40px;
-	margin-top: 5px;
+	margin-top: 4px;
+	vertical-align:middle;
 	width: 60px;
 	height: 34px;
   }
